--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
  [submodule "meshtestic"]
 	path = meshtestic
 	url = https://github.com/meshtastic/meshTestic
+[submodule "protobufs"]
+	path = protobufs
+	url = https://github.com/sghitch/meshtastic-protobufs.git
